@@ -25,7 +25,6 @@ import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.http.ResponseDefinition;
 import com.github.tomakehurst.wiremock.matching.MatchResult;
 import com.github.tomakehurst.wiremock.stubbing.StubMapping;
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
@@ -34,7 +33,7 @@ public class SnapshotStubMappingPostProcessorTest {
   // NOTE: testStubMappings is not deeply immutable, as StubMappings are mutable, and to preserve
   // hermeticity must be an instance rather than a class variable.
   private final List<StubMapping> testStubMappings =
-      ImmutableList.of(
+      List.of(
           WireMock.get("/foo").build(), WireMock.get("/bar").build(), WireMock.get("/foo").build());
 
   @Test
